Added colors; fixed error after deleting users

--- a/Messenger/Messenger.csproj
+++ b/Messenger/Messenger.csproj
@@ -1769,6 +1769,7 @@
     <Content Include="Content\vendor\jsscrollpane\jquery.jscrollpane.min.js" />
     <Content Include="Content\vendor\jsscrollpane\jquery.mousewheel.js" />
     <Content Include="favicon.ico" />
+    <Content Include="Files\2.txt" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -1857,6 +1858,7 @@
     <Content Include="Models\Model.edmx.diagram">
       <DependentUpon>Model.edmx</DependentUpon>
     </Content>
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\librarymanager.tk - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
@@ -1895,7 +1897,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Files\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
